# statebox

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  install-audio-dev-tools.sh
Source/capture/: RuntimeProfile.cpp  RuntimeProfile.h
Source/dsp/: Convolver.cpp  Convolver.h  DynamicConvolutionEngine.cpp  DynamicConvolutionEngine.h  StateEstimator.h
tools/capture/: CMakeLists.txt  main.cpp
tools/capture/core/: Alignment.cpp  Alignment.h  CapturePipeline.cpp  CapturePipeline.h  DcPack.cpp  DcPack.h  Deconvolution.cpp  Deconvolution.h  GridCapture.cpp  GridCapture.h  HarmonicSeparation.cpp  HarmonicSeparation.h  LiveCaptureEngine.cpp  LiveCaptureEngine.h  SweepSynth.cpp  SweepSynth.h
tools/capture/examples/: pioneer-filter.plan.json
tools/capture/tests/: CoreTests.cpp
tools/render/: CMakeLists.txt  main.cpp
tools/render/tests/: EngineTests.cpp
